--- a/test/benchmarks/openacc/altera/fft2d/Makefile
+++ b/test/benchmarks/openacc/altera/fft2d/Makefile
@@ -50,7 +50,7 @@ DEFSET_ACC = -DVERIFICATION=$(VERIFICATION) -DLOGN=$(LOGN)
 OMP ?= 0
 MODE ?= normal
 AOCL_BOARD ?= p385_hpc_d5
-#AOCL_BOARD ?= p385_hpc_a7
+#AOCL_BOARD ?= p510t_sch_ax115 
 #AOCL_FLAGS ?= -march=emulator
 #AOCL_FLAGS ?= -march=emulator -c
 #AOCL_FLAGS ?= -v -c --report
