--- a/test/examples/openarc/altera_pipe/Makefile
+++ b/test/examples/openarc/altera_pipe/Makefile
@@ -52,9 +52,8 @@ AOCL_BOARD ?= p385_hpc_d5
 #AOCL_FLAGS ?= -march=emulator
 #AOCL_FLAGS ?= -march=emulator -c
 #AOCL_FLAGS ?= -v -g -c --report
-#AOCL_FLAGS ?= -v -c --report
-AOCL_FLAGS ?= -v --report
-#KERNEL_BINARY="openarc_kernel_p385_hpc_d5PCIe385n.aocx"
+AOCL_FLAGS ?= -v -c --report
+#AOCL_FLAGS ?= -v --report
 
 #########################################################
 # Use the following macros to give program-specific     #
